--- a/index.html
+++ b/index.html
@@ -420,8 +420,10 @@
           </p>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      <div class="accordion-body custom-accordion-text">
+        If you wish to visit the United States temporarily or be granted entry for
+        <br>
+        a very specific period of time, you will need a non-immigrant visa.
       </div>
     </div>
   </div>
@@ -444,8 +446,10 @@
           </p>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      <div class="accordion-body custom-accordion-text">
+        If you wish to visit the United States temporarily or be granted entry for
+        <br>
+        a very specific period of time, you will need a non-immigrant visa.
       </div>
     </div>
   </div>
@@ -514,7 +518,7 @@
     <div class="card card-style h-100">
       <div class="card-body">
         <h5 class="custom-card-title card-title"> <span class="custom-text-color"> Chapter 3 </span> </h5>
-        <p class="card-text custom-card-text m-md-2 p-md-2"> 
+        <p class="card-text custom-card-text m-md-2 p-md-2" style="color: #7C7C7C"> 
           If I am married in a foreign country, and my husband 
           ill-treats me for Dowry, can I still file a case against him 
           under the Dowry prohibition Act?If I am married in a foreign country, 
@@ -533,7 +537,7 @@
     <div class="card card-style h-100">
         <div class="card-body">
           <h5 class="custom-card-title card-title"> <span class="custom-text-color"> Chapter 4 </span> </h5>
-          <p class="card-text custom-card-text m-md-2 p-md-2"> 
+          <p class="card-text custom-card-text m-md-2 p-md-2" style="color: #7C7C7C"> 
             If I am married in a foreign country, and my husband 
             ill-treats me for Dowry, can I still file a case against him 
             under the Dowry prohibition Act?If I am married in a foreign 
